Fix build errors upon repository clone